--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>A dot doing a circular loop</title>
+		<title>front-end tools</title>
 	</head>
 	<body></body>
 </html>
