--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,5 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>front-end tools</title>
 	</head>
-	<body>
-
-		<div class="img-container">
-			<img class="img-cursor" src="https://imghost.net/ib/uBUcKYhZT6uJf5q_1711631279.png"></img>
-			<img class="img-cursor" src="https://imghost.net/ib/dbvjPg4jUtTD6lK_1711631416.webp"></img>
-			<img class="img-cursor" src="https://imghost.net/ib/uemFNLjqJbDTIon_1711631953.jpg"></img>
-		</div>
-
-	</body>
+	<body></body>
 </html>
